--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <main class="content centered-block">
     <section id="beginner">
       <h2 class="content__title">Первые шаги в HTML и CSS</h2>
+      <h2 class="content__title">Вторые шаги в HTML и CSS хд</h2>
       <ul class="flex-row list flex-row_space_bottom">
         <li class="project project_name_music-album project_width_l project_height_l">
           <a href="#" class="project__overlay">Обложка музыкального альбома</a>
